ajout videos + correctif image

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -87,23 +87,22 @@
                                 <source src="assets/videos/pagination.mp4" type="video/mp4">
                             </video>
                         </div>
-                        <div class="video-item video-style-placeholder" data-video="assets/videos/ecommerce-demo.mp4">
-                            <img src="assets/images/ecommerce/panier.png" alt="Démonstration 2" class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/ecommerce-demo.mp4" type="video/mp4">
+                        <div class="video-item video-style-framed" data-video="assets/videos/panier.mp4">
+                            <img src="assets/images/ecommerce/panier.png" alt="Démonstration du panier" class="video-poster">
+                            <video class="video-player" muted loop preload="metadata">
+                                <source src="assets/videos/panier.mp4" type="video/mp4">
                             </video>
                         </div>
-                        <div class="video-item video-style-placeholder" data-video="assets/videos/ecommerce-demo.mp4">
-                            <img src="assets/images/ecommerce/produit.png" alt="Démonstration 3" class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/ecommerce-demo.mp4" type="video/mp4">
+                        <div class="video-item video-style-framed" data-video="assets/videos/commande.mp4">
+                            <img src="assets/images/ecommerce/commande_admin.png" alt="Démonstration des commandes" class="video-poster">
+                            <video class="video-player" muted loop preload="metadata">
+                                <source src="assets/videos/commande.mp4" type="video/mp4">
                             </video>
                         </div>
-                        <div class="video-item video-style-placeholder" data-video="assets/videos/ecommerce-demo.mp4">
-                            <img src="assets/images/ecommerce/commande_admin.png" alt="Démonstration 4"
-                                class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/ecommerce-demo.mp4" type="video/mp4">
+                        <div class="video-item video-style-framed" data-video="assets/videos/stripe.mp4">
+                            <img src="assets/images/ecommerce/pdf.png" alt="Démonstration Stripe" class="video-poster">
+                            <video class="video-player" muted loop preload="metadata">
+                                <source src="assets/videos/stripe.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -155,12 +154,9 @@
 
                             <!-- Capture d'écran : Base de données -->
                             <div class="screenshot-container">
-                                <picture>
-                                    <source srcset="assets/images/ecommerce/bdd_ecommerce.webp" type="image/webp">
-                                    <img src="assets/images/ecommerce/bdd_ecommerce.png" alt="Schéma de la base de données my_shop_dev montrant les tables produits, commandes, utilisateurs et leurs relations" loading="lazy"
+                                <img src="assets/images/ecommerce/bdd_ecommerce.png" alt="Base de données my_shop_dev"
                                     class="screenshot-img"
                                     onerror="this.src='https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=500&fit=crop'">
-                                </picture>
                                 <p class="screenshot-caption">Base de données : my_shop_dev</p>
                             </div>
 
