--- a/gestion.html
+++ b/gestion.html
@@ -78,33 +78,19 @@
                 <!-- Video Section -->
                 <div class="project-video-section">
                     <h2>Démonstration</h2>
-                    <div class="project-video-grid">
-                        <div class="video-item" data-video="assets/videos/gestionX2.mp4">
-                            <img src="assets/images/ecommerce/gestion/accueil.png" alt="Démonstration 1"
+                    <div class="project-video-grid video-grid-small">
+                        <div class="video-item video-style-framed" data-video="assets/videos/ajout.mp4">
+                            <img src="assets/images/ecommerce/gestion/ajout-employe.png" alt="Démonstration ajout d'employé"
                                 class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/gestionX2.mp4" type="video/mp4">
+                            <video class="video-player" muted loop preload="metadata">
+                                <source src="assets/videos/ajout.mp4" type="video/mp4">
                             </video>
                         </div>
-                        <div class="video-item" data-video="assets/videos/gestionX2.mp4">
-                            <img src="assets/images/ecommerce/gestion/accueil.png" alt="Démonstration 2"
+                        <div class="video-item video-style-framed" data-video="assets/videos/modif.mp4">
+                            <img src="assets/images/ecommerce/gestion/accueil.png" alt="Démonstration modification"
                                 class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/gestionX2.mp4" type="video/mp4">
-                            </video>
-                        </div>
-                        <div class="video-item" data-video="assets/videos/gestionX2.mp4">
-                            <img src="assets/images/ecommerce/gestion/accueil.png" alt="Démonstration 3"
-                                class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/gestionX2.mp4" type="video/mp4">
-                            </video>
-                        </div>
-                        <div class="video-item" data-video="assets/videos/gestionX2.mp4">
-                            <img src="assets/images/ecommerce/gestion/accueil.png" alt="Démonstration 4"
-                                class="video-poster">
-                            <video class="video-player" muted loop>
-                                <source src="assets/videos/gestionX2.mp4" type="video/mp4">
+                            <video class="video-player" muted loop preload="metadata">
+                                <source src="assets/videos/modif.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
