--- a/projets.html
+++ b/projets.html
@@ -11,16 +11,6 @@
         content="Découvrez mes projets de développement web : site e-commerce Symfony, application de gestion, et autres réalisations en PHP, JavaScript et frameworks modernes.">
     <meta name="keywords" content="projets développement web, Symfony, e-commerce, PHP, portfolio projets">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWN3523KSG"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-RWN3523KSG');
-    </script>
-
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://votre-domaine.com/projets.html">
@@ -86,7 +76,10 @@
     <main>
         <section class="horizontal-projects-section">
             <div class="projects-sticky-container">
-
+                <div class="scroll-hint">
+                    <span class="scroll-hint-text">Scroller pour explorer</span>
+                    <i class="fas fa-arrow-right scroll-hint-icon"></i>
+                </div>
 
                 <div class="horizontal-track">
                     <!-- Projet 1 -->
@@ -94,11 +87,8 @@
                         <a href="ecommerce.html" class="project-item-link">
                             <div class="project-number">(01)</div>
                             <div class="project-image-wrapper">
-                                <picture>
-                                    <source srcset="assets/images/ecommerce/page_accueil.webp" type="image/webp">
-                                    <img src="assets/images/ecommerce/page_accueil.png" alt="Page d'accueil du site e-commerce Symfony avec produits en vedette, catégories et navigation intuitive" loading="lazy"
+                                <img src="assets/images/ecommerce/page_accueil.png" alt="Site E-commerce"
                                     class="project-image">
-                                </picture>
                             </div>
                             <div class="project-info">
                                 <h2 class="project-name">Site E-commerce</h2>
@@ -112,11 +102,8 @@
                         <a href="gestion.html" class="project-item-link">
                             <div class="project-number">(02)</div>
                             <div class="project-image-wrapper">
-                                <picture>
-                                    <source srcset="assets/images/ecommerce/gestion/accueil.webp" type="image/webp">
-                                    <img src="assets/images/ecommerce/gestion/accueil.png" alt="Interface d'accueil de l'application de gestion du personnel avec tableau de bord et statistiques" loading="lazy"
+                                <img src="assets/images/ecommerce/gestion/accueil.png" alt="Application de Gestion"
                                     class="project-image">
-                                </picture>
                             </div>
                             <div class="project-info">
                                 <h2 class="project-name">Application de Gestion</h2>
@@ -130,11 +117,8 @@
                         <a href="csv-visualisation.html" class="project-item-link">
                             <div class="project-number">(03)</div>
                             <div class="project-image-wrapper">
-                                <picture>
-                                    <source srcset="assets/images/CSV/CSV.webp" type="image/webp">
-                                    <img src="assets/images/CSV/CSV.png" alt="Interface de visualisation de données CSV avec graphiques Chart.js et tableaux interactifs" loading="lazy"
+                                <img src="assets/images/CSV/CSV.png" alt="Visualisation CSV avec Chart.js"
                                     class="project-image">
-                                </picture>
                             </div>
                             <div class="project-info">
                                 <h2 class="project-name">Visualisation CSV</h2>
@@ -148,11 +132,8 @@
                         <a href="iss-tracking.html" class="project-item-link">
                             <div class="project-number">(04)</div>
                             <div class="project-image-wrapper">
-                                <picture>
-                                    <source srcset="assets/images/ISS/ISS.webp" type="image/webp">
-                                    <img src="assets/images/ISS/ISS.png" alt="Carte interactive montrant la position de la Station Spatiale Internationale (ISS) en temps réel avec coordonnées" loading="lazy"
+                                <img src="assets/images/ISS/ISS.png" alt="Suivi de l'ISS en temps réel"
                                     class="project-image">
-                                </picture>
                             </div>
                             <div class="project-info">
                                 <h2 class="project-name">Suivi de l'ISS</h2>
@@ -166,11 +147,8 @@
                         <a href="chatbot-openbiz.html" class="project-item-link">
                             <div class="project-number">(05)</div>
                             <div class="project-image-wrapper">
-                                <picture>
-                                    <source srcset="assets/images/chatbot/chatbot.webp" type="image/webp">
-                                    <img src="assets/images/chatbot/chatbot.png" alt="Interface du chatbot interactif Openbiz Dev avec bulles de conversation et sélection de services" loading="lazy"
+                                <img src="assets/images/chatbot/chatbot.png" alt="Chatbot Openbiz Dev"
                                     class="project-image">
-                                </picture>
                             </div>
                             <div class="project-info">
                                 <h2 class="project-name">Chatbot Openbiz Dev</h2>
