--- a/veille.html
+++ b/veille.html
@@ -78,7 +78,7 @@
     <main>
         <section class="veille-section">
             <div class="container">
-                <div class="veille-header reveal" data-reveal-direction="scale">
+                <div class="veille-header reveal" data-reveal="scale">
                     <h2 class="section-title">Veille Technologique</h2>
                     <p class="veille-intro">
                         Je mène une veille active sur les technologies émergentes et les tendances du secteur IT. 
@@ -89,7 +89,7 @@
                 <div class="veille-grid">
                     <article class="veille-card reveal" data-veille="avions-chasse">
                         <div class="veille-image">
-                            <img src="assets/images/cockpit.jpg" alt="Avion de chasse français">
+                            <img src="assets/images/cockpit.jpg" loading="lazy" alt="Avion de chasse français">
                             <div class="veille-card-badge">
                                 <i class="fas fa-fighter-jet"></i>
                                 <span>Défense</span>
@@ -111,10 +111,10 @@
                     </article>
 
                     <article class="veille-card reveal" data-veille="automatisation" style="animation-delay: 0.1s;">
-                        <div class="veille-image">
+                        <div class="veille-image" >
                             <img src="assets/images/pc.jpg" alt="Automatisation avec n8n">
-                            <div class="veille-card-badge">
-                                <i class="fas fa-robot"></i>
+                            <div class="veille-card-badge" >
+                                <i class="fas fa-robot" ></i>
                                 <span>Automatisation</span>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                     </article>
                 </div>
 
-                <div class="veille-stats reveal" data-reveal-direction="fade-up">
+                <div class="veille-stats reveal" data-reveal="scale">
                     <div class="stat-item">
                         <div class="stat-icon"><i class="fas fa-book-open"></i></div>
                         <div class="stat-number">2</div>
