Modification page coach

--- a/Application-mobile-coach.html
+++ b/Application-mobile-coach.html
@@ -199,15 +199,14 @@
 
                             <!-- Capture d'écran : Interface -->
                             <div class="screenshot-container">
-                                <img src="assets/images/coach/coach-interface.png"
-                                    alt="Interface utilisateur de l'application" class="screenshot-img"
-                                    onerror="this.src='https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&h=500&fit=crop'">
+                                <img src="assets/images/coach/interface img.png"
+                                    alt="Interface utilisateur de l'application" class="screenshot-img">
                                 <p class="screenshot-caption">Interface utilisateur avec champs de saisie et résultats</p>
                             </div>
 
                             <h3>Modèle de données (Profil.cs)</h3>
                             <p>
-                                La classe <code>Profil</code> encapsule la logique de calcul de l'IMG. Elle contient :
+                                La classe <code>Profil</code> contient la fonction de calcul de l'IMG :
                             </p>
                             <ul style="margin-left: 24px; margin-bottom: 16px; color: var(--text-secondary);">
                                 <li>Les propriétés privées pour stocker les données utilisateur (sexe, poids, taille, âge)</li>
